--- a/neurohus/frontend/package.json
+++ b/neurohus/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neuroljus-neurohus-frontend",
   "version": "1.0.0",
-  "description": "Neuroljus Neurohus - Sveriges första digitala hus för empati, kunskap och neurodiversitet",
+  "description": "Frontend för Neuroljus Neurohus - Sveriges första digitala hus för empati, kunskap och neurodiversitet",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,46 +11,45 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.2",
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "tailwindcss": "^3.3.5",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "next-i18next": "^15.2.0",
-    "react-i18next": "^13.5.0",
-    "i18next": "^23.7.6",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "@types/leaflet": "^1.9.8",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
-    "framer-motion": "^10.16.5",
-    "react-hook-form": "^7.47.0",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "axios": "^1.6.2",
-    "swr": "^2.2.4",
-    "react-hot-toast": "^2.4.1",
-    "date-fns": "^2.30.0",
-    "recharts": "^2.8.0"
+    "next": "^15.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.6.3",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.15",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "lucide-react": "^0.460.0",
+    "clsx": "^2.1.1",
+    "class-variance-authority": "^0.7.1"
   },
   "devDependencies": {
-    "eslint": "^8.53.0",
-    "eslint-config-next": "14.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7"
+    "eslint": "^9.15.0",
+    "eslint-config-next": "^15.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "keywords": [
+    "neurodiversitet",
+    "empati",
+    "LSS",
+    "assistans",
+    "autism",
+    "neuropsykiatriska funktionsnedsättningar",
+    "välfärdsteknik",
+    "AI",
+    "community",
+    "utbildning",
+    "forskning"
+  ],
+  "author": "Neuroljus Neurohus Team",
+  "license": "MIT"
 }
